--- a/job-style.css
+++ b/job-style.css
@@ -105,13 +105,11 @@ main > footer {
         display: flex;
         flex-direction: column;
     }
+    nav {
+        width: 100%;
+        height: 20vh;
 }
-@media screen and (max-width: 500px) {
-    .pictures {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
+
 }
 @media screen and (max-width: 500px) {
 
