--- a/krea-style.css
+++ b/krea-style.css
@@ -84,6 +84,16 @@ main{
     flex: 1;
 }
 
+.pics-of-art {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+img {
+    width: 30%;
+    margin-bottom: 20px;
+    border-radius: 10%;
 }
 
 div.divider{
@@ -105,17 +115,17 @@ main > footer {
         display: flex;
         flex-direction: column;
     }
+    nav {
+        width: 100%;
+        height: 20vh;
 }
-@media screen and (max-width: 500px) {
-    .pictures {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
+
 }
-@media screen and (max-width: 500px) {
+
+}
+@media screen and (max-width: 580px) {
 
     img {
-        width: 100%;
+        width: 90%;
     }
 }
