--- a/styles.css
+++ b/styles.css
@@ -18,21 +18,14 @@ header{
     font-style: normal;
 }
 
-.under-header{
+.under-header {
     display: flex;
     font-family: "Zilla Slab", serif;
     font-weight: 400;
     font-style: normal;
     min-height: calc(100vh - 80px);
+}
 
-    nav{
-        display: flex;
-        flex-direction: column;
-        padding: 1%;
-        background-color: #FF85AD;
-        align-content: end;
-        width: 140px;
-    }
 
     ul.nav-bar {
         position: sticky;
@@ -45,13 +38,20 @@ header{
         height: 50vh;
     }
 
-
+nav{
+    display: flex;
+    flex-direction: column;
+    padding: 1%;
+    background-color: #FF85AD;
+    align-content: end;
+    width: 140px;
+}
 
     li {
         list-style-type: none;
 
     }
-}
+
 a {
     text-decoration: none;}
 
@@ -126,24 +126,22 @@ main > footer {
         display: flex;
         flex-direction: column;
     }
-}
-@media screen and (max-width: 500px) {
+
+    nav {
+        width: 100%;
+        height: 20vh;
+    }
+
     .pictures {
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
         justify-content: center;
     }
-}
-@media screen and (max-width: 500px) {
 
     img {
         width: 100%;
     }
-}
-@media screen and (max-width: 500px) {
-    nav {
-        display: flex;
-        flex-direction: column;
+    section.pictures > img {
         width: 100%;
     }
 }
