--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ header{
     ul.nav-bar {
         position: sticky;
         top: 0;
-        z-index: 1030; /* to prevent the navbar getting covered up by other content */
+        z-index: 1030;
 
         display: flex;
         flex-direction: column;
